--- a/template/templates/template/ielts.html
+++ b/template/templates/template/ielts.html
@@ -31,15 +31,15 @@
                         <div class="flex teacher">
                                 <!-- <span><img src="https://cdn.jsdelivr.net/gh/mdsibgatullah/keeron/assets/images/Elta-Karim.jpg" alt="EltaKarim"></span> -->
                             <div>
-                                <h4>SANTO AHMED</h4>
-                                <p>JLPT Certified</p>
-                                <p>Certified Japanese language Teacher,</p>
-                                <p>Arts and Entertainment</p>
+                                <h4>Anonna Mohammad</h4>
+                                
+                                <p>Certified IELTS language Teacher,</p>
+                                <p>Band Score 7.5,8.0</p>
                             </div>
                         </div>
                     </div>
                     <div class="hero_video">
-                        <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FSupaDigiOfficial%2Fvideos%2F1872805436867627&width=500&show_text=true&appId=2742789426014533&height=817" width="250" height="350" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+                        <iframe width="100%" height="315" src="https://www.youtube.com/embed/4flPCY2Osfk?si=5hBkOjK15KNYCH-A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div>
                 </div>
             </div>
