--- a/template/templates/template/china2.html
+++ b/template/templates/template/china2.html
@@ -300,7 +300,7 @@
                         <div class="d-flex align-items-center justify-content-center">
                             <span style="color: white; font-size: 1.2rem; margin-right: 10px;">📞</span>
                             <h4 class="mb-0 fw-bold" style="color: white; font-size: 1.4rem;">
-                                লাইভ হটলাইন: 01717763198
+                                <a href="https://skillbeeacademy.com/enroll/chinese-language-course/" style="color: white; text-decoration: none;">লাইভ হটলাইন: 01717763198</a>
                             </h4>
                         </div>
                     </div>
