--- a/template/templates/template/china2.html
+++ b/template/templates/template/china2.html
@@ -817,7 +817,7 @@
                 <h3>মেন্টর পরিচিতি</h3>
                 <br>
                     <div class="mentor_img">
-                        <img src="https://skillbeeacademy.com/upload/images/china.jpeg" alt="img">
+                        <img src="https://skillbeeacademy.com/upload/images/chinamentor.jpg" alt="img">
                     </div>
             </div>
          </section>
