--- a/template/templates/template/china2.html
+++ b/template/templates/template/china2.html
@@ -31,10 +31,10 @@
                         <div class="flex teacher">
                                 <!-- <span><img src="https://cdn.jsdelivr.net/gh/mdsibgatullah/keeron/assets/images/Elta-Karim.jpg" alt="EltaKarim"></span> -->
                             <div>
-                                <h4>Rafat Khan</h4>
+                                <h4>Md Anis Islam</h4>
                                 
                                 <p>Certified Chinese language Teacher,</p>
-                                <p>Language and Entertainment</p>
+                                <p>University of Dhaka</p>
                             </div>
                         </div>
                     </div>
