updated bottom btn

--- a/template/templates/template/china2.html
+++ b/template/templates/template/china2.html
@@ -823,14 +823,17 @@
                     </div>
             </div>
          </section>
-         <section class="saying">
-         <div class="flex" style="justify-content: center; color: red;">
-                <div class="container">
-                    <h3><del>৫০০০৳</del></h3>
-                    <a href="https://skillbeeacademy.com/enroll/chinese-language-course/"><button class="enroll_Now" >Apply Now</button></a>
+         <section class="saying py-5">
+            <div class="d-flex justify-content-center align-items-center text-center" style="min-height: 200px; color: red;">
+                <div>
+                <h3><del>৫০০০৳</del></h3>
+                <a href="https://skillbeeacademy.com/enroll/chinese-language-course/">
+                    <button class="enroll_Now">Apply Now</button>
+                </a>
                 </div>
             </div>
-         </section>
+            </section>
+
          
          <div class="modal">
             <div class="overlay" onclick="closePopup()"></div>
