--- a/template/templates/template/china2.html
+++ b/template/templates/template/china2.html
@@ -327,7 +327,7 @@
                             <li>✅ Visa Procedure এবং Admission Procedure অনেক সহজ, এবং Visa Ratio অনেক ভালো</li>
                             <li>✅ খরচ তুলনামূলক কম, ১ বছরের টিউশন ফি প্রায় ২.৫-৩ লক্ষ CNY (কম বেশি হতে পারে)</li>
                             <li>✅ চায়নায় যাওয়ার পর দেশ থেকে আর টাকা নিতে হয় না</li>
-                            <li>✅ শুধুমাত্র Chinese Language Course (HSK 1) শেষ করে আপনিও গ্রহণ করতে পারেন চায়নায় উচ্চ শিক্ষা, চাকুরি ও স্থায়ীভাবে বসবাসের সুযোগ</li>
+                            <li>✅ শুধুমাত্র Chinese Language Course (HSK 1) শেষ করে আপনিও পেতে পারেন চীনে উচ্চশিক্ষা, চাকরি ও স্থায়ীভাবে বসবাসের সুযোগ।</li>
                         </ul>
                     
                 </div>
