--- a/template/templates/template/china2.html
+++ b/template/templates/template/china2.html
@@ -39,7 +39,7 @@
                         </div>
                     </div>
                     <div class="hero_video">
-                       <iframe width="100%" height="315" src="https://www.youtube.com/embed/_ucNW7iCxxE?si=03yNosmnyamEYt6i" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                       <iframe width="100%" height="315" src="https://www.youtube.com/embed/GhCbtKrE1r4?si=ozmS2VnpGzGlP4qR" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div>
                 </div>
             </div>
